# quant-system

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  ROADMAP.md  conftest.py  docker-compose.low-mem.yml  docker-compose.yml  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml
config/: default.yaml
config/strategies/: mean_reversion.yaml
cpp/: CMakeLists.txt  benchmark.py  pyproject.toml  setup.py
cpp/bindings/: bindings.cpp
cpp/include/quant_cpp/: feature_engine.h  matching_engine.h  order_book.h
cpp/src/: feature_engine.cpp  matching_engine.cpp  order_book.cpp
cpp/tests/: test_feature_engine.cpp  test_helpers.h  test_matching_engine.cpp  test_order_book.cpp  test_quant_cpp.py
lib/: setup.py
lib/quant_core/: __init__.py  accelerated.py  circuit_breaker.py  coinbase_rest.py  config.py  kafka_utils.py  logging.py  metrics.py  models.py  portfolio_state.py  rate_limiter.py  reconciliation.py  redis_utils.py
lib/quant_core/tests/: test_circuit_breaker.py  test_coinbase_rest.py  test_config.py  test_kafka_utils.py  test_metrics_registry.py  test_models.py  test_portfolio_state.py  test_rate_limiter.py  test_reconciliation.py  test_redis_utils.py
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: service-health.json  trading-overview.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/tests/: test_monitoring_config.py
scripts/: create_topics.sh  init_db.sql  paper_trading_validator.py
scripts/tests/: test_paper_trading_validator.py
services/alpha-engine/: Dockerfile
services/alpha-engine/alpha_engine_svc/: __init__.py  cross_asset.py  feature_engine.py  main.py  order_book.py  strategy.py
services/alpha-engine/alpha_engine_svc/strategies/: __init__.py  linear_regression.py  mean_reversion.py  momentum.py  pairs_trading.py
services/alpha-engine/tests/: test_cross_asset.py  test_feature_engine.py  test_linear_regression.py  test_mean_reversion.py  test_momentum.py  test_order_book.py  test_pairs_trading.py  test_strategy.py
services/backtest/: requirements.txt
services/backtest/backtest_svc/: __init__.py  backtest_analysis.py  cli.py  cli_analysis.py  comparison.py  evaluator.py  main.py  monte_carlo.py  param_sensitivity.py  replay.py  results.py  sensitivity_sweep.py  validation.py  walk_forward.py
services/backtest/tests/: test_backtest_analysis.py  test_cli_analysis.py  test_comparison.py  test_evaluator.py  test_monte_carlo.py  test_param_sensitivity.py  test_replay.py  test_results.py  test_sensitivity_sweep.py  test_validation.py  test_walk_forward.py
services/execution/: Dockerfile  requirements.txt
services/execution/execution_svc/: __init__.py  fill_simulator.py  main.py  order_tracker.py  strategy_mode.py
services/execution/tests/: test_fill_simulator.py  test_order_tracker.py  test_strategy_mode.py
services/market-data/: Dockerfile  requirements.txt
services/market-data/market_data_svc/: binance_ws.py  exchange_ws.py  main.py  normalizer.py  publisher.py
services/market-data/tests/: test_binance_ws.py  test_exchange_ws.py  test_normalizer.py  test_publisher.py
services/post-trade/: Dockerfile  requirements.txt
services/post-trade/frontend/: .eslintrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
services/post-trade/frontend/src/: App.tsx  api.ts
services/post-trade/frontend/src/components/: Card.tsx  LoadingSpinner.tsx
services/post-trade/frontend/src/hooks/: usePolling.ts
services/post-trade/frontend/src/tabs/: AlphaDecayTab.tsx  AnalysisTab.tsx  DrawdownTab.tsx  FillsTab.tsx  PnLTab.tsx  RiskMetricsTab.tsx  TCATab.tsx
services/post-trade/post_trade_svc/: __init__.py  alpha_decay.py  analysis_jobs.py  dashboard.py  main.py  metrics.py  pnl.py  state.py  tca.py
services/post-trade/tests/: test_alpha_decay.py  test_analysis_jobs.py  test_dashboard.py  test_metrics.py  test_pnl.py  test_state.py  test_tca.py
services/risk-gateway/: Dockerfile  requirements.txt
services/risk-gateway/risk_gateway_svc/: __init__.py  main.py  risk_checks.py  var_model.py
services/risk-gateway/tests/: test_risk_checks.py  test_var_model.py
services/storage/: Dockerfile  requirements.txt
services/storage/storage_svc/: batch_writer.py  consumer.py  main.py
services/storage/tests/: test_batch_writer.py  test_consumer.py
(+1 files in other folders)
