[project]
name = "quant-system"
version = "0.1.0"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = [
    "lib/quant_core/tests",
    "services/market-data/tests",
    "services/storage/tests",
    "services/alpha-engine/tests",
    "services/risk-gateway/tests",
    "services/execution/tests",
    "services/post-trade/tests",
]
asyncio_mode = "auto"
addopts = "-v --tb=short -q"
markers = [
    "integration: marks tests requiring live infrastructure (Kafka, DB, Redis)",
]

[tool.coverage.run]
source = [
    "lib/quant_core",
    "services/market-data/market_data_svc",
    "services/storage/storage_svc",
    "services/alpha-engine/alpha_engine_svc",
    "services/risk-gateway/risk_gateway_svc",
    "services/execution/execution_svc",
    "services/post-trade/post_trade_svc",
]
omit = [
    "*/tests/*",
    "*/main.py",
    "*/logging.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = ["venv", ".git", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["quant_core", "market_data_svc", "storage_svc", "alpha_engine_svc", "risk_gateway_svc", "execution_svc", "post_trade_svc"]
